--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,13 @@ version: 2.1
 
 orbs:
   maven: circleci/maven@0.0.12
+  codecov: codecov/codecov@1.0.2
 
 workflows:
   maven_test:
     jobs:
       - maven/test # checkout, build, test, and upload test results
-steps:
-  - run:
-      name: Send to Codecov
-      command: bash <(curl -s https://codecov.io/bash)
+    build:
+      steps:
+        - codecov/upload:
+            file: {{ coverage_report_filepath }}
